--- a/partner_field/views/res_partner_view.xml
+++ b/partner_field/views/res_partner_view.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
+<!--suppress ALL -->
 <openerp>
     <data>
 
-        <record model="ir.ui.view" id="demo_view_partner_form">
+        <record model="ir.ui.view" id="view_partner_form">
             <field name="name">res.partner.form</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
