--- a/security_demo/views/res_partner_view.xml
+++ b/security_demo/views/res_partner_view.xml
@@ -2,7 +2,7 @@
 <openerp>
     <data>
 
-        <record model="ir.ui.view" id="demo_view_partner_form">
+        <record model="ir.ui.view" id="view_partner_form">
             <field name="name">res.partner.form</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
